--- a/hw3-rgoutam/pom.xml
+++ b/hw3-rgoutam/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.cmu.lti.11791.f14.hw3</groupId>
 	<artifactId>hw3-rgoutam</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3-SNAPSHOT</version>
 
 	<repositories>
 		<repository>
@@ -85,7 +85,7 @@
 		<url>scm:git:git@github.com:rahulgoutam07/hw3-rgoutam.git</url>
 		<connection>scm:git:git@github.com:rahulgoutam07/hw3-rgoutam.git</connection>
 		<developerConnection>scm:git:git@github.com:rahulgoutam07/hw3-rgoutam.git</developerConnection>
-		<tag>hw3-rgoutam-0.0.2</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<build>
 		<plugins>
